--- a/debaren-frontend/package.json
+++ b/debaren-frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.12.2",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
