--- a/debaren-frontend/package.json
+++ b/debaren-frontend/package.json
@@ -10,11 +10,26 @@
   },
   "dependencies": {
     "'": "ckeditor/ckeditor5-build-classic",
-    "@ckeditor/ckeditor5-build-classic": "^44.3.0",
+    "@ckeditor/ckeditor5-build-classic": "^39.0.1",
     "@ckeditor/ckeditor5-react": "^9.5.0",
-    "@headlessui/react": "^2.2.4",
+    "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
-    "@reduxjs/toolkit": "^2.8.2",
+    "@reduxjs/toolkit": "^2.7.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-blockquote": "^2.12.0",
+    "@tiptap/extension-color": "^2.12.0",
+    "@tiptap/extension-font-family": "^2.12.0",
+    "@tiptap/extension-font-size": "^3.0.0-next.3",
+    "@tiptap/extension-horizontal-rule": "^2.12.0",
+    "@tiptap/extension-image": "^2.12.0",
+    "@tiptap/extension-link": "^2.12.0",
+    "@tiptap/extension-table": "^2.12.0",
+    "@tiptap/extension-table-cell": "^2.12.0",
+    "@tiptap/extension-table-header": "^2.12.0",
+    "@tiptap/extension-table-row": "^2.12.0",
+    "@tiptap/extension-text-align": "^2.12.0",
+    "@tiptap/extension-text-style": "^2.12.0",
+    "@tiptap/extension-underline": "^2.12.0",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.12.2",
