--- a/debaren-frontend/package.json
+++ b/debaren-frontend/package.json
@@ -13,6 +13,7 @@
     "@ckeditor/ckeditor5-build-classic": "^39.0.1",
     "@ckeditor/ckeditor5-react": "^9.5.0",
     "@headlessui/react": "^2.2.2",
+    "@hello-pangea/dnd": "^18.0.1",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/typography": "^0.5.16",
@@ -30,13 +31,18 @@
     "@tiptap/extension-text-align": "^2.12.0",
     "@tiptap/extension-text-style": "^2.12.0",
     "@tiptap/extension-underline": "^2.12.0",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-date-range": "^1.4.10",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.12.2",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
